--- a/business/templates/businessCreditBuilding/businessBankAccount.html
+++ b/business/templates/businessCreditBuilding/businessBankAccount.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -31,34 +31,46 @@
       <iframe width="100%" height="515" src="https://www.youtube.com/embed/4YjMxNHZvlM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
     <div class="row">
-      <div class="col-md-12">
-        <div class="card-body">
-          <h4>Having A Business Bank Account Is Paramount. </h4>
+      <div class="col-md-4">
+          <div class="card">
+              <div class="card-body">
+                <img src="https://dvh1deh6tagwk.cloudfront.net/niche-builder/5daca7d7e8528.png" height="200px" width="100%" alt="">
+                <br><br>
+                  <h5 class="card-title">Do You Need A Business Bank Account?</h5>
+                  <h5 class="card-title">You Can Set Up Your Business Account Completely Online With AZLO Bank <br><br><b>*Fee Free Checking Account*</b></h5>
+                  <div class="btn-group">
+                   <a target="_blank" class="btn btn-primary" href="https://www.azlo.com/">Click Here To Set Up <br>Your Bank Account</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card">
+              <div class="card-body">
+                <img src="https://d187qskirji7ti.cloudfront.net/companies/wide_images/000/000/005/1518101921_large.png" height="200px" width="100%" alt="">
+                <br><br>
+                  <h5 class="card-title">Do You Need A Business Bank Account?</h5>
+                  <h5 class="card-title">We Also Recommend JP Morgan Chase </h5>
+                  <div class="btn-group">
+                   <a target="_blank" class="btn btn-primary" href="https://www.azlo.com/">Click Here To Go <br>To Their Website</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+              <img src="https://spring.capitalone.com/img/print-logo-blue.png" height="200px" width="100%" alt="">
+              <br><br>
+                <h5 class="card-title">Do You Need A Business Bank Account?</h5>
+                <h5 class="card-title">We Also Recommend Capital One Bank</h5>
+                <div class="btn-group">
+                 <a target="_blank" class="btn btn-primary" href="https://www.capitalone.com/">Click Here To Go <br>To Their Website</a>
+                </div>
+            </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <a href="https://www.azlo.com/" target="_blank">
-          <h3>Fee Free Entreprenuer Bank You Can Setup Without Having To Go Inside The Bank</h3>
-          <img src="https://assets-production.fundera.com/uploads/new_markets_product/image/6/RGB_Full_Logo_Horizontal_Gradient_Icon-Positive_3x.png" height="360px" width="50%" alt="">
-        </a>
-      </div>
-    </div>
   </section>
-  
-        <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-        </script>
-        <!--End of Tawk.to Script-->
 
 {% endblock %}
