--- a/business/templates/businessCreditBuilding/businessGoodStanding.html
+++ b/business/templates/businessCreditBuilding/businessGoodStanding.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -30,15 +30,24 @@
     <iframe width="100%" height="515" src="https://www.youtube.com/embed/6bkyWwSff_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
     </div>
     <div class="row">
-          <div class="col-md-12">
+      <div class="col-md-5">
+          <div class="card">
+              <div class="card-body">
+                <img src="https://images.pexels.com/photos/1239162/pexels-photo-1239162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" height="200px" width="100%" alt="">
+                <br><br>
+                  <h5 class="card-title">All states have an online location where you can check the status of any corporation registered in that state. Information provided can include the name, date of incorporation, registered number or ID, and current standing. To check the status of a company, click the link next to the state in which it is incorporated.</h5>
+                  <h5 class="card-title">Choose The State Your Business Is Registered In To Check If Your Business Is In Good Standing Below</h5>
+              </div>
+          </div>
+      </div>
+
+          <div class="col-md-7">
               <div class="card">
-                <h2 style="text-align:center;">All states have an online location where you can check the status of any corporation registered in that state. Information provided can include the name, date of incorporation, registered number or ID, and current standing. To check the status of a company, click the link next to the state in which it is incorporated.</h2>
-  
                   <div class="card-header card-default">
                     Choose The State Your Business Is Registered In To Check If Your Business Is In Good Standing Below
                   </div>
-  
-  
+
+
                   <div class="card-body">
                       <table id="datatable2" class="table table-striped dt-responsive nowrap">
                         <thead>
@@ -46,7 +55,7 @@
                                 <th>States</th>
                             </tr>
                         </thead>
-  
+
                         <tbody>
                             <tr>
                               <td><a target="_blank" class="btn btn-sm btn-primary" href="http://arc-sos.state.al.us/CGI/CORPNAME.MBR/INPUT">Alabama</a></td>
@@ -309,7 +318,7 @@
           </div>
       </div>
   </section>
-  
+
         <!--Start of Tawk.to Script-->
         <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
