--- a/business/templates/businessCreditBuilding/virtualAddress.html
+++ b/business/templates/businessCreditBuilding/virtualAddress.html
@@ -2,15 +2,6 @@
 {% load static %}
 
 {% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>    
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -33,40 +24,23 @@ text-align: center;
 }
 </style>
   <div class="row">
-    <div class="col-md-6">
-      <div class="card-body">
-          <form id="signupForm" method="post" class="form-horizontal" action="">
 
-<h1>The Best Place To Get A Virtual Address</h1>
-<br><br>
-<div class="form-group">
-<a href="https://www.davincivirtual.com/?rfsn=3351103.f03a08" target="_blank">
-<img src="https://fitsmallbusiness.com/wp-content/uploads/2017/08/davinci-virtual-logo.png"   height="350" width="100%" alt="">
-</a>
-</div>
-
-
-
-</form>
-      </div>
+    <div class="col-md-5">
+        <div class="card">
+            <div class="card-body">
+              <img src="https://fitsmallbusiness.com/wp-content/uploads/2017/08/davinci-virtual-logo.png" height="200px" width="100%" alt="">
+              <br><br>
+                <h5 class="card-title">Do You Need A Virtual Adress?</h5>
+                <h5 class="card-title">We Recommend Davinci Virutal Offices Solutions As Our First Choice </h5>
+                <div class="btn-group">
+                 <a target="_blank" class="btn btn-primary" href="https://www.davincivirtual.com/?rfsn=3351103.f03a08">Click Here To Get Your <br>Virtual Address</a>
+                </div>
+            </div>
+        </div>
     </div>
   </div>
 
 </section>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
 
 
 {% endblock %}
