--- a/business/templates/applyForLoan.html
+++ b/business/templates/applyForLoan.html
@@ -29,10 +29,17 @@
          <iframe width="100%" height="515" src="https://www.youtube.com/embed/CGVRiGp3xAQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
     </div>
     <div class="row">
-       <div class="col-md-12">
-          <div class="card-body">
-           <center> <h3>Watch The Video Above & Click The Button Below To Login To Your Portal & Upload Your Documents To See The Best Loans For You</h3>
-           <h3><b>Prerequisites For A Business Loan: 3 Months In Business & $5,000 In Revenue Per Month</b></h3><a target="_blank" class="btn btn-primary" href="{% url 'loanportal:loanapplication'%}">Click Here To Go To The Loan Portal</a> </center>
+
+       <div class="col-md-6">
+           <div class="card">
+               <div class="card-body">
+                 <img src="https://images.pexels.com/photos/935756/pexels-photo-935756.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" height="200px" width="100%" alt="">
+                 <br><br>
+                   <h5 class="card-title">Watch The Video Above & Click The Button Below To Login To Your Portal & Upload Your Documents To See The Best Loans For You</h5>
+                   <h5 class="card-title">Prerequisites For A Business Loan: 3 Months In Business & $5,000 In Revenue Per Month</h5>
+                   <a target="_blank" class="btn btn-primary" href="{% url 'loanportal:loanapplication'%}">Click Here To Go To The Loan Portal</a>
+               </div>
+           </div>
        </div>
     </div>
  </section>
