--- a/business/templates/businessCreditBuilding/businessBackInGoodStanding.html
+++ b/business/templates/businessCreditBuilding/businessBackInGoodStanding.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -28,25 +28,21 @@
     <iframe width="100%" height="515" src="https://www.youtube.com/embed/_ZojaHJwBTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
     </div>
     <br><br>
+
     <div class="row">
-            <div class="col-md-12">
-          <iframe src="https://www.llcuniversity.com/llc-annual-report/" width="100%" height="800px"></iframe>
-            </div>
+
+      <div class="col-md-5">
+          <div class="card">
+              <div class="card-body">
+                <img src="https://images.pexels.com/photos/935756/pexels-photo-935756.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" height="200px" width="100%" alt="">
+                <br><br>
+                  <h5 class="card-title">How To Get Your Business Back In Good Standing</h5>
+                  <h5 class="card-title">Your state will require you to file an Annual Report in order to keep your LLC in compliance, your contact information updated and your LLC in good standing. Fees and due dates vary by state.</h5>
+                  <h5 class="card-title"><b>Watch The Video Above To Learn More As Well</b></h5>
+              </div>
           </div>
+      </div>
+    </div>
   </section>
-  
-        <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-        </script>
-        <!--End of Tawk.to Script-->
 
 {% endblock %}
