--- a/business/templates/businessCreditBuilding/domain.html
+++ b/business/templates/businessCreditBuilding/domain.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -26,37 +26,23 @@
        <div class="col-md-12">
      <iframe width="100%" height="515" src="https://www.youtube.com/embed/mmOpMZwKcuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
- <!--   <div class="row">
-      <div class="col-md-12">
-        <h2 style="text-align:center;">Login With The Email You Have Associated With This Account & The Password Northface14. If You Do Not Remember Go To My Progress In The Top Right Corner To View Your Login Credentials.</h2>
-        <br><br>
-        <iframe src="https://www.websitebuilder.ai/" width="90%" height="750px"></iframe>
-      </div>
-    </div> -->
+
     <div class="row">
-      <div class="col-md-12">
-        <br>
-        <h2 style="text-align:center;">Click The Image Below To Choose The Best Domain Name For You</h2>
-        <br><br>
- <a href="https://www.secureserver.net/products/domain-registration?plid=553543" target="_blank">
-        <img src="https://millennialbusinessbuilders.com/images/domain.png" height="700px" width="90%" alt="">
-        </a>
-      </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                  <img src="https://images.pexels.com/photos/1029757/pexels-photo-1029757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="200px" width="100%" alt="">
+                  <br><br>
+                    <h5 class="card-title">Do You Have A Domain Name For Your Website?</h5>
+                    <h5 class="card-title">Your Business Needs To Have A Domain Name In Order For You To Get A Website & Professional Email Address. These Are Required In Order For You To Look Credible & Start Being Able To Get Business Credit Without Leveraging Your Personal Credit. </h5>
+                    <div class="btn-group">
+                     <a target="_blank" class="btn btn-primary" href="https://www.millennialbusinessbuildersllc.com/products/domain-registration">Click Here To Get Your <br>Domain Name</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
  </section>
- 
-       <!--Start of Tawk.to Script-->
-       <script type="text/javascript">
-       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-       (function(){
-       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-       s1.async=true;
-       s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-       s1.charset='UTF-8';
-       s1.setAttribute('crossorigin','*');
-       s0.parentNode.insertBefore(s1,s0);
-       })();
-       </script>
-       <!--End of Tawk.to Script-->
- 
+
+
 {% endblock %}
