--- a/business/templates/businessCreditBuilding/merchantAccount.html
+++ b/business/templates/businessCreditBuilding/merchantAccount.html
@@ -2,15 +2,6 @@
 {% load static %}
 
 {% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>    
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -30,32 +21,21 @@
       <iframe width="100%" height="515" src="https://www.youtube.com/embed/coC-oYw8vEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
     <div class="row">
-      <div class="col-md-12">
-        <div class="card-body">
-          <h4>Having A Merchant Account Is Important When Trying To Collect All Forms Of Payments. </h4>
-        </div>
+      <div class="col-md-5">
+          <div class="card">
+              <div class="card-body">
+                <img src="https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="200px" width="100%" alt="">
+                <br><br>
+                  <h5 class="card-title">Do You Have A Merchant Account?</h5>
+                  <h5 class="card-title">Get A $50-$100 Sign Up Bonus When You Sign Up As A Merchant With Us. Fill Out The Form To The Right.</h5>
+                  <h5 class="card-title">Having A Merchant Account Is Important When Trying To Collect All Forms Of Payments.</h5>
+              </div>
+          </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-          <h3>Get A $50 Sign Up Bonus When You Sign Up As A Merchant With Us. Fill Out The Form Below.</h3>
+      <div class="col-md-6">
           <script type="text/javascript" src="https://millennialbusinessbuilders.formstack.com/forms/js.php/account_creation_copy_copy"></script><noscript><a href="https://millennialbusinessbuilders.formstack.com/forms/account_creation_copy_copy" title="Online Form">Online Form - Account Creation (White Label Partners) - Regular Account In Portals</a></noscript><div style="text-align:right; font-size:x-small;"><a href="http://www.formstack.com?utm_source=jsembed&utm_medium=product&utm_campaign=product+branding&fa=h,3720102" title="Powered by Formstack">Powered by Formstack</a></div>
       </div>
     </div>
   </section>
-  
-        <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-        </script>
-        <!--End of Tawk.to Script-->
 
 {% endblock %}
