--- a/business/templates/businessCreditBuilding/professionalEmailAddress.html
+++ b/business/templates/businessCreditBuilding/professionalEmailAddress.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -29,25 +29,24 @@
        <div class="col-md-12">
      <iframe width="100%" height="515" src="https://www.youtube.com/embed/y_3dIMH_z3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
- <!--   <div class="row">
-      <div class="col-md-12">
-        <h2 style="text-align:center;">Login With The Email You Have Associated With This Account & The Password Northface14. If You Do Not Remember Go To My Progress In The Top Right Corner To View Your Login Credentials.</h2>
-        <br><br>
-        <iframe src="https://www.websitebuilder.ai/" width="90%" height="750px"></iframe>
-      </div>
-    </div> -->
+
     <div class="row">
-      <div class="col-md-12">
-        <br>
-        <h2 style="text-align:center;">Click The Image Below To Choose The Best Professional Email Address For You</h2>
-        <br><br>
- <a href="https://www.secureserver.net/products/email?plid=553543" target="_blank">
-        <img class="lastImage" src="https://millennialbusinessbuilders.com/images/professionalemail.png" height="700px" width="90%" alt="">
-        </a>
-      </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                  <img src="https://images.pexels.com/photos/193003/pexels-photo-193003.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="200px" width="100%" alt="">
+                  <br><br>
+                    <h5 class="card-title">Do You Have A Professional Email Address?</h5>
+                    <h5 class="card-title">Your Business Needs To Have A Professional Email Address In Order For You To Look Credible & Start Being Able To Get Business Credit Without Leveraging Your Personal Credit. </h5>
+                    <div class="btn-group">
+                     <a target="_blank" class="btn btn-primary" href="https://www.millennialbusinessbuildersllc.com/products/email">Click Here To Get Your <br>Professional Email Address</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
  </section>
- 
+
  <style>
      .lastImage{
         margin-bottom: 22px;
@@ -66,6 +65,6 @@
        })();
        </script>
        <!--End of Tawk.to Script-->
- 
+
 
 {% endblock %}
