--- a/business/templates/businessEntity.html
+++ b/business/templates/businessEntity.html
@@ -10,7 +10,7 @@
         remoteBaseUrl: 'https://chatterpal.me/',
         version: '7.23'
     });
-</script>    
+</script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -19,7 +19,7 @@
 
 <div class="row page-header">
     <div class="col-lg-6 align-self-center ">
-       <h2>Business Entity</h2>
+       <h2>Business Entssity</h2>
     </div>
  </div>
  <section class="main-content">
@@ -30,7 +30,6 @@
     <div class="row">
        <div class="col-md-12">
           <div class="card-body">
-            <h1>DO YOU HAVE A BUSINESS ENTITY?</h1>
            <h2>Overview</h2>
            <p>It’s important that you have a strong business foundation and it all starts with filing your business entity with your Secretary of State.  Each stage has a different filing and fee structure.  Like a birth certificate is to an individual a business entity is the birth of a business.</p>
            <br><br>
@@ -59,7 +58,7 @@
           </div>
        </div>
     </div>
- 
+
  </section>
  <style>
      a:not([href]):not([tabindex]) {
@@ -67,7 +66,7 @@
     text-decoration: none;
 }
  </style>
- 
+
        <!--Start of Tawk.to Script-->
        <script type="text/javascript">
        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
