--- a/business/templates/ein.html
+++ b/business/templates/ein.html
@@ -2,15 +2,6 @@
 {% load static %}
 
 {% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>    
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
@@ -27,38 +18,35 @@
        <div class="col-md-12">
      <iframe width="100%" height="515" src="https://www.youtube.com/embed/rvI5g9lIADY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
     </div>
+
     <div class="row">
-       <div class="col-md-12">
-          <div class="card-body">
-            <h1>DO YOU HAVE AN EIN#?</h1>
-           <h2>Overview</h2>
-           <h3>The United States requires all business entities to file for an EIN#.  Like a social security number is to an individual an EIN# is to a business.</h3>
-           <br><br>
-           <h1>APPLY FOR YOUR BUSINESS'S EIN#</h1>
-           <br>
-           <h3>The United States requires all business entities to file for an EIN#.  Like a social security number is to an individual an EIN# is to a business.</h3>
-           <div class="btn-group">
-            <a target="_blank" class="btn btn-primary" href="https://www.irs.gov/businesses/small-businesses-self-employed/apply-for-an-employer-identification-number-ein-online">Click Here To Apply To Get Your EIN Number</a>
-           </div>
- 
-          </div>
-       </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                  <img src="https://images.pexels.com/photos/1367269/pexels-photo-1367269.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" height="200px" width="100%" alt="">
+                  <br><br>
+                  <h3><b>Step 1</b></h3>
+                    <h5 class="card-title">DO YOU HAVE AN EIN#?</h5>
+                    <h5 class="card-title">The United States requires all business entities to file for an EIN#. Like a social security number is to an individual an EIN# is to a business.</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                  <img src="https://images.pexels.com/photos/936137/pexels-photo-936137.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" height="200px" width="100%" alt="">
+                  <br><br>
+                  <h3><b>Step 2</b></h3>
+                    <h5 class="card-title">APPLY FOR YOUR BUSINESS'S EIN#</h5>
+                    <div class="btn-group">
+                     <a target="_blank" class="btn btn-primary" href="https://www.irs.gov/businesses/small-businesses-self-employed/apply-for-an-employer-identification-number-ein-online">Click Here To Apply To Get Your EIN Number</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
  </section>
- 
-       <!--Start of Tawk.to Script-->
-       <script type="text/javascript">
-       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-       (function(){
-       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-       s1.async=true;
-       s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-       s1.charset='UTF-8';
-       s1.setAttribute('crossorigin','*');
-       s0.parentNode.insertBefore(s1,s0);
-       })();
-       </script>
-       <!--End of Tawk.to Script-->
- 
+
 
 {% endblock %}
