--- a/business/templates/marketingYourBusiness.html
+++ b/business/templates/marketingYourBusiness.html
@@ -43,7 +43,7 @@
                   <p class="card-text">Click The Button Below To Go To Our Marketing Course</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                     <a target="_blank" class="btn btn-primary" href="{% url 'marketingcourse:mainfile'%}">Go To Our Marketing Course</a>
+                     <a target="_blank" class="btn btn-primary" href="{% url 'marketingcourse:mainfile'%}">Go To Marketing Course</a>
                     </div>
                   </div>
                 </div>
@@ -56,7 +56,7 @@
                   <p class="card-text">Click The Button Below To Get $500+ In Advertising Coupons</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a target="_blank" class="btn btn-primary" href="https://howardkingston.com/hustlers-guide-1420-free-ad-credit/">Click Here To Get $500+ In Advertising Coupons</a>
+                      <a target="_blank" class="btn btn-primary" href="https://howardkingston.com/hustlers-guide-1420-free-ad-credit/">Click Here To Get <br> $500+ In Advertising Coupons</a>
                     </div>
                   </div>
                 </div>
