--- a/getdinerotoday/templates/base-immediatemoney.html
+++ b/getdinerotoday/templates/base-immediatemoney.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Credit Course</title>
+    <title>Get Dinero Today</title>
     <link rel="stylesheet" type="text/css" href='{% static "lib/metisMenu/metisMenu.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "lib/bootstrap/css/bootstrap.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "lib/vectormap/jquery-jvectormap-2.0.2.css" %}'>
@@ -24,17 +24,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" type="text/css" href='{% static "lib/toast/jquery.toast.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "style.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "lib/jquery-ui/jquery-ui.css" %}'>
-    <style>
-      body.nav-collapsed .main-sidebar-nav.dark-navigation{
-        display: none !important;
-      }
-      body.nav-collapsed .admin-logo {
-        display: none !important;
-      }
-      body.nav-collapsed .main-content {
-          margin-left: 20px;
-      }
-    </style>
 
     {% block extrastyle %}
 
@@ -78,9 +67,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </a>
                         <ul class="dropdown-menu top-dropdown">
                           {% if request.user.is_authenticated %}
-                            <!-- <li>
+                            <li>
                               <a href="{% url 'user:myprogress' %}"><i class="icon-bell"></i>My Progress</a>
-                            </li> -->
+                            </li>
                             <!--<li>-->
                             <!-- <a href="#"><i class="icon-user"></i> Profile</a>-->
                             <!--</li>-->
@@ -116,63 +105,66 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <p class="lead margin-b-0 toggle-none">
                     {{ request.user.get_full_name }}
                   </p>
-                  <p class="text-muted mv-0 toggle-none">Welcome To Our Credit Repair Course</p>
+                  <p class="text-muted mv-0 toggle-none">Welcome</p>
                </div>
                <ul class="metisMenu nav flex-column" id="menu">
 {#                  <li class="nav-heading"><span>MAIN</span></li>#}
                   <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
+                    <a href="/" class="nav-link"><span class="toggle-none">Dashboard</span></a>
                   </li>
                   <li class="nav-item">
-                    <a href="{% url 'creditcourse:maincreditfile' %}" class="nav-link"> Introduction Page </a>
+                    <a href="{% url 'immediatemoney:upgrade' %}" class="nav-link">Upgrade to Full Business Builder Program with No Money Down</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">How To Get A Good Mortgage Rate <span class="fa arrow"></span></span></a>
+                     <a href="https://www.youtube.com/watch?v=TS7hk62T7jE&feature=youtu.be" target="_blank" class="nav-link"> Watch Webinar On Building Business Credit </a>
+                   </li>
+                   <li class="nav-item">
+                     <a href="{% url 'immediatemoney:business-credit-plan' %}" class="nav-link"> Create My Business Credit Building Plan </a>
+                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column " aria-expanded="false">
-                        <li class="nav-item"><a href="{% url 'creditcourse:mortgageone' %}" class="nav-link">8 effective credit tips for getting mortgage ready in 2020</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:mortgagetwo' %}" class="nav-link">How To Get Approved For A Home Loan</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:mortgagethree'%}" class="nav-link">How Much Does It Actually Cost To Buy A Home?</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:mortgagefour'%}" class="nav-link">FHA vs. Conventional (Which One Is Better?)</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-entity' %}" class="nav-link">Business Entity</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:ein' %}" class="nav-link">EIN Number</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-license'%}" class="nav-link">Business License</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:website-creation-options' %}" class="nav-link">Website Creation</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:fax-number-options' %}" class="nav-link">Fax Number</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:four-eleven' %}" class="nav-link">411 Listings</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:professional-email'%}" class="nav-link">Professional Email Address</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:domain'%}" class="nav-link">Domain</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:toll-free-options'%}" class="nav-link">Toll Free Number</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:virtual-address'%}" class="nav-link">Virtual Address</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-bank-account'%}" class="nav-link">Business Bank Account</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:merchant-account'%}" class="nav-link">Merchant Account</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:duns'%}" class="nav-link">Duns Number</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:sic'%}" class="nav-link">SIC & NAISC Codes</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-good-standing'%}" class="nav-link">Checking If Your Business Is In Good Standing  </a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-in-good-standing'%}" class="nav-link">How To Get Your Business Back In Good Standing</a></li>
                      </ul>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"><span class="toggle-none"> How To Build Personal Credit <span class="fa arrow"></span></span></a>
+                     <a href="{% url 'immediatemoney:business-credit-step'%}" class="nav-link"> Choose Business Credit Building Steps You Need Done For You </a>
+                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Business Credit Bureaus To Become Established With  <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                         <li class="nav-item"><a href="{% url 'creditcourse:personalcreditone'%}" class="nav-link">Chase 5/24 Rule Full Guide In 2020 </a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:personalcredittwo'%}" class="nav-link"> How To Get 100% Approved For Business Credit Cards For New Business</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:personalcreditthree'%}" class="nav-link">Five Tips To Boost Your Credit Score In 2020 </a></li>
-                       <li class="nav-item"><a href="{% url 'creditcourse:personalcreditfour'%}" class="nav-link"> The 5 Best Credit Cards For Beginners In 2020</a></li>
-                       <li class="nav-item"><a href="{% url 'creditcourse:personalcreditfive'%}" class="nav-link">How I got my Credit Score from 0 to 792 - Beginner Guide </a></li>
-                      <li class="nav-item"><a href="{% url 'creditcourse:personalcreditsix'%}" class="nav-link"> How To Get 100% Instant Approval For Credit Cards</a></li>
-                      <li class="nav-item"><a href="{% url 'creditcourse:personalcreditseven'%}" class="nav-link">How To Get A Business Credit Card Without A Business (2020)</a></li>
-                     <li class="nav-item"><a href="{% url 'creditcourse:personalcrediteight'%}" class="nav-link"> Business Credit Cards Explained</a></li>
-                     <li class="nav-item"><a href="{% url 'creditcourse:personalcreditnine'%}" class="nav-link">Credit Scores Fully Explained </a></li>
-
+                         <li class="nav-item"><a href="{% url 'immediatemoney:experian'%}" class="nav-link"> Experian Business </a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:dunn-brad'%}" class="nav-link"> Dunn & Bradsheet </a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:equifax'%}" class="nav-link"> Equifax Business </a></li>
                      </ul>
                   </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">How To Repair Your Credit<span class="fa arrow"></span></span></a>
+                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Corporate Credit List<span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="{% url 'creditcourse:repaircreditone'%}" class="nav-link">How To Fix A Bad Credit Score</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:repaircredittwo'%}" class="nav-link">Best Credit Cards During Credit Repair</a></li>
-                        <li class="nav-item"><a href="{% url 'creditcourse:personalcredittwelve'%}" class="nav-link">How To Repair Your Credit</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:vendor-list'%}" class="nav-link">Starter Vendor List</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:store-credit-vendor-list'%}" class="nav-link">Store Credit Vendor List</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:business-credit-vendor'%}" class="nav-link">Revolving Business Credit Vendor List</a></li>
+                        <li class="nav-item"><a href="{% url 'immediatemoney:cc-credit-vendor'%}" class="nav-link">Credit Card No Personal Gaurantee Vendor List</a></li>
                      </ul>
                   </li>
-
-                  <li class="nav-item">
-                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">How To Get A Great Car Loan<span class="fa arrow"></span></span></a>
-                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloanone' %}" class="nav-link">How to Negotiate a Car Deal (And Save Big)</a></li>
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How To Do Google Remarketing Ads</a></li>
-                     </ul>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Templates For Credit Repair<span class="fa arrow"></span></span></a>
-                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloanone' %}" class="nav-link">How to Negotiate a Car Deal (And Save Big)</a></li>
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How To Do Google Remarketing Ads</a></li>
-                     </ul>
-                  </li>
+                   <li class="nav-item">
+                     <a href="/businesscreditcourse/home" target="_blank" class="nav-link"> Business Credit Building Course </a>
+                   </li>
                </ul>
             </div>
          </div>
@@ -223,9 +215,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src='{% static "lib/datatables/dataTables.responsive.min.js" %}'></script>
     <script src='{% static "lib/toast/jquery.toast.min.js" %}'></script>
     <script src='{% static "dashboard.js" %}'></script>
-
-
-
+    <style>
+      body.nav-collapsed .main-sidebar-nav.dark-navigation{
+        display: none !important;
+      }
+      body.nav-collapsed .admin-logo {
+        display: none !important;
+      }
+      body.nav-collapsed .main-content {
+          margin-left: 20px;
+      }
+    </style>
     <script>
     // var chatPal = new ChatPal({embedId: 'DfT7BnTm5dGn', remoteBaseUrl: 'https://chatterpal.me/', version: '7.23'});
     </script>
@@ -243,6 +243,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           $("body").toggleClass("nav-toggle");
         });
     })
+
+          // if ($("body").hasClass("nav-collapsed")) {
+          //   console.log("nav-collapsed")
+          // }
 
     // Left menu collapse
       // $('.left-nav-collapsed a').on('click', function (event) {
