--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,50 +1,56 @@
 {% extends "userBase.html" %}
 
 {% block content %}
-{% if error %}
-<p class=" text-center"><font size="3" color="red">{{error}}</font></p>
-{% endif %}
-{% if password_change_msg %}
-<p class=" text-center"><font size="3" color="green">{{password_change_msg}}</font></p>
-{% endif %}
-<form class="new_user" id="new_user" action="{% url 'user:login'%}" accept-charset="UTF-8" method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="user_email">Email</label>
-        <div class="group-icon">
-          <input autofocus="autofocus" autocomplete="email" placeholder="Email" class="form-control" required="required" type="email" value="" name="username" id="user_email" />
-          <span class="icon-user text-muted icon-input"></span>
+    {% if error %}
+        <p class="text-center"><font size="3" color="red">{{ error }}</font></p>
+    {% endif %}
+    {% if password_change_msg %}
+        <p class="text-center"><font size="3" color="green">{{ password_change_msg }}</font></p>
+    {% endif %}
+    <form class="new_user" id="new_user" action="{% url 'user:login' %}" accept-charset="UTF-8" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="user_email">Email</label>
+            <div class="group-icon">
+                <input autofocus="autofocus" autocomplete="email" placeholder="Email" class="form-control"
+                       required="required" type="email" value="" name="username" id="user_email"/>
+                <span class="icon-user text-muted icon-input"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="user_password">Password</label><br />
-        <div class="group-icon">
-          <input autocomplete="current-password" placeholder="Password" class="form-control" required="required" type="password" name="password" id="user_password" />
-          <span class="icon-lock text-muted icon-input"></span>
+        <div class="form-group">
+            <label for="user_password">Password</label><br/>
+            <div class="group-icon">
+                <input autocomplete="current-password" placeholder="Password" class="form-control" required="required"
+                       type="password" name="password" id="user_password"/>
+                <span class="icon-lock text-muted icon-input"></span>
+            </div>
         </div>
-    </div>
-    <div class="clearfix" >
-<!--        <div class="float-left">-->
-<!--          <div class="checkbox checkbox-primary margin-r-5">-->
-<!--            <input name="user[remember_me]" type="hidden" value="0" /><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me" />-->
-<!--            <label for="user_remember_me">Remember me</label>-->
-<!--          </div>-->
-<!--        </div>-->
-        <div class="float-right">
-          <input type="submit" name="commit" style="height: 40px;" value="Log in" class="btn btn-block btn-primary btn-rounded box-shadow" data-disable-with="Log in" />
+        <div class="clearfix">
+            <!--        <div class="float-left">-->
+            <!--          <div class="checkbox checkbox-primary margin-r-5">-->
+            <!--            <input name="user[remember_me]" type="hidden" value="0" /><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me" />-->
+            <!--            <label for="user_remember_me">Remember me</label>-->
+            <!--          </div>-->
+            <!--        </div>-->
+            <div class="float-right">
+                <input type="submit" name="commit" style="height: 40px;" value="Log in"
+                       class="btn btn-block btn-primary btn-rounded box-shadow" data-disable-with="Log in"/>
+            </div>
         </div>
-    </div><br>
-    <p class=" text-center">Do Not Have An Account Register Below?</p>
-    <a class="btn btn-block btn-success btn-rounded box-shadow" href="{% url 'user:signup'%}">Create A New Account</a>
-<br>
-<p class=" text-center">Forgot Password?</p>
+        <br>
+        <p class=" text-center">Do Not Have An Account Register Below?</p>
+        <a class="btn btn-block btn-success btn-rounded box-shadow" href="{% url 'user:signup' %}">Create A New
+            Account</a>
+        <br>
+        <p class=" text-center">Forgot Password?</p>
 
-</form>
-<a class="btn btn-block btn-success btn-rounded box-shadow" href=" {% url 'user:password_change' %}">Reset Password</a>
-<style>
-    .clearfix{
-        height: 56px;
-    }
-</style>
+    </form>
+    <a class="btn btn-block btn-success btn-rounded box-shadow" href=" {% url 'user:password_change' %}">Reset
+        Password</a>
+    <style>
+        .clearfix {
+            height: 56px;
+        }
+    </style>
 {% endblock %}
         
