business credit course done

--- a/businesscreditcourse/templates/10.html
+++ b/businesscreditcourse/templates/10.html
@@ -2,36 +2,41 @@
 {% load static %}
 
 {% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
+    <script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous"
+            data-cfasync="false">
+    </script>
+    <script>
+        var chatPal = new ChatPal({
+            embedId: 'DfT7BnTm5dGn',
+            remoteBaseUrl: 'https://chatterpal.me/',
+            version: '7.23'
+        });
+    </script>
 {% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
 <!-- ============================================================== -->
 {% block content %}
 
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Set Up Business Website</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>First, conduct a Domain Name Search to check the availability of the domain name you want for your business website. If your business name is already taken try some variations of it until you find an available one. Then purchase it.
-<br><br>
-Lenders and credit providers will check to see that you have a professional website and email address. Whether you want a new website that is custom built for your business or you prefer to upgrade your existing one, there is a solution.</h3> </center>
-      </div>
-   </div>
-</section>
+    <div class="row page-header">
+        <div class="col-lg-6 align-self-center ">
+            <h2>Set Up Business Website</h2>
+        </div>
+    </div>
+    <section class="main-content">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card-body">
+                    <center><h3>First, conduct a Domain Name Search to check the availability of the domain name you
+                        want for your business website. If your business name is already taken try some variations of it
+                        until you find an available one. Then purchase it.
+                        <br><br>
+                        Lenders and credit providers will check to see that you have a professional website and email
+                        address. Whether you want a new website that is custom built for your business or you prefer to
+                        upgrade your existing one, there is a solution.</h3></center>
+                </div>
+            </div>
+    </section>
 
 
 {% endblock %}
