--- a/businesscreditcourse/templates/13.html
+++ b/businesscreditcourse/templates/13.html
@@ -1,36 +1,19 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
-
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Obtain Required Business Licenses</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>One of the most common mistakes when building credit for your company is non-matching business addresses on your business licenses. Even worse is not having the “required” licenses for your type of business to operate legally. You will need to contact your State, County, and City Government offices to see if there are any required licenses and permits to operate your type of business. You can contact them directly via phone or search their website to confirm if there are any required licenses or permits for your type of business.
-<br><br>
-For example if you start a home based business some cities may require that you have a license, while others may not.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
+{% block title %}
+    Obtain Required Business Licenses
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    One of the most common mistakes when building credit for your company is non-matching
+    business addresses on your business licenses. Even worse is not having the “required” licenses
+    for your type of business to operate legally. You will need to contact your State, County, and
+    City Government offices to see if there are any required licenses and permits to operate your
+    type of business. You can contact them directly via phone or search their website to confirm if
+    there are any required licenses or permits for your type of business.
+    <br><br>
+    For example if you start a home based business some cities may require that you have a license,
+    while others may not.
+{% endblock card-content %}
