--- a/businesscreditcourse/templates/14.html
+++ b/businesscreditcourse/templates/14.html
@@ -1,35 +1,14 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
-
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Set Up Business Bank Account</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Decide which bank you want to open an account with and call or email them. Ask what their specific requirements are for opening a business checking account. Most banks require a copy of your business certificate from the secretary of state, an IRS document with your EIN number on it, and sometimes your articles of incorporation.</h3> </center>
-      </div>
-   </div>
-</section>
-
-
-{% endblock %}
+{% block title %}
+    Set Up Business Bank Account
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Decide which bank you want to open an account with and call or email them. Ask what
+    their specific requirements are for opening a business checking account. Most banks require a
+    copy of your business certificate from the secretary of state, an IRS document with your EIN
+    number on it, and sometimes your articles of incorporation.
+{% endblock card-content %}
