--- a/businesscreditcourse/templates/16.html
+++ b/businesscreditcourse/templates/16.html
@@ -1,35 +1,15 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Verify Each Agency Has Your Business Listed the Same
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Take the time to verify that these main agencies (State, IRS, Bank, and 411 national
+    directory) have your business listed the same way and with your Exact Legal Name. Also, take the
+    time to ensure every bill you get (power bill, phone bill, landlord, etc.) has the business name
+    listed correctly and comes to the business address.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Verify Each Agency Has Your Business Listed the Same</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Take the time to verify that these main agencies (State, IRS, Bank, and 411 national directory) have your business listed the same way and with your Exact Legal Name. Also, take the time to ensure every bill you get (power bill, phone bill, landlord, etc.) has the business name listed correctly and comes to the business address.</h3> </center>
-      </div>
-   </div>
-</section>
-
-
-{% endblock %}
