--- a/businesscreditcourse/templates/17.html
+++ b/businesscreditcourse/templates/17.html
@@ -1,45 +1,25 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Verify Business Listings Match
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Before moving on to the next step take the time now to verify that each agency has your
+    business listed the same.
+    <br><br>
+    State business filings listed correctly
+    <br><br>
+    County licenses and/or permits listed correctly
+    <br><br>
+    City license and/or permit filings listed correctly
+    <br><br>
+    IRS filings listed correctly
+    <br><br>
+    Bank account listed correctly
+    <br><br>
+    411 directory assistance listed correctly
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Verify Business Listings Match</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Before moving on to the next step take the time now to verify that each agency has your business listed the same.
-<br><br>
-State business filings listed correctly
-<br><br>
-County licenses and/or permits listed correctly
-<br><br>
-City license and/or permit filings listed correctly
-<br><br>
-IRS filings listed correctly
-<br><br>
-Bank account listed correctly
-<br><br>
-411 directory assistance listed correctly</h3> </center>
-      </div>
-   </div>
-</section>
-{% endblock %}
