--- a/businesscreditcourse/templates/18.html
+++ b/businesscreditcourse/templates/18.html
@@ -1,50 +1,29 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Create a Business Plan
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    The following are key aspects that every business plan should include:
+    <br><br>
+    The Executive Summary – a 30 second pitch that outlines your business.
+    <br><br>
+    Market Analysis – How big of a role you intent to play and why.
+    <br><br>
+    Company Description – An overview of what the business will do and why it is viable.
+    <br><br>
+    Organization & Management – Outline of the experience and expertise the company has.
+    <br><br>
+    Marketing & Sales – Your strategy for customer acquisition and how it will be done.
+    <br><br>
+    Products or Services – What product is the company going to develop or offer.
+    <br><br>
+    Capitalization Requirements – How much funding is required and how will it be raised.
+    <br><br>
+    Financials – At least 2 years of projected sales revenue that the industry and market can
+    support.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Create a Business Plan</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>The following are key aspects that every business plan should include:
-<br><br>
-The Executive Summary – a 30 second pitch that outlines your business.
-<br><br>
-Market Analysis – How big of a role you intent to play and why.
-<br><br>
-Company Description – An overview of what the business will do and why it is viable.
-<br><br>
-Organization & Management – Outline of the experience and expertise the company has.
-<br><br>
-Marketing & Sales – Your strategy for customer acquisition and how it will be done.
-<br><br>
-Products or Services – What product is the company going to develop or offer.
-<br><br>
-Capitalization Requirements – How much funding is required and how will it be raised.
-<br><br>
-Financials – At least 2 years of projected sales revenue that the industry and market can support.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
