--- a/businesscreditcourse/templates/19.html
+++ b/businesscreditcourse/templates/19.html
@@ -1,40 +1,18 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    List Personal Assets
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Do the owners own residential real estate?
+    <br><br>
+    What is the current market value of the property?
+    <br><br>
+    Whats is currently owed against the property?
+    <br><br>
+    What is the value of IRA & 401K investments?
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>List Personal Assets</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Do the owners own residential real estate?
-<br><br>
-What is the current market value of the property?
-<br><br>
-Whats is currently owed against the property?
-<br><br>
-What is the value of IRA & 401K investments?</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
