--- a/businesscreditcourse/templates/20.html
+++ b/businesscreditcourse/templates/20.html
@@ -1,39 +1,16 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    List Business Assets
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    What is the amount of outstanding invoices you have with customers?
+    <br><br>
+    What is the current amount of existing purchase orders?
+    <br><br>
+    What is the total value of equipment owned outright by the business?
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>List Business Assets</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>What is the amount of outstanding invoices you have with customers?
-<br><br>
-What is the current amount of existing purchase orders?
-<br><br>
-What is the total value of equipment owned outright by the business?</h3> </center>
-      </div>
-   </div>
-</section>
-
-
-{% endblock %}
