--- a/businesscreditcourse/templates/21.html
+++ b/businesscreditcourse/templates/21.html
@@ -1,42 +1,24 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Check Your Personal Credit
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Separating personal and business credit will better protect a business owner’s assets
+    and credit ratings. By ensuring that your personal credit reports and credit scores are fully
+    optimized you gain leverage in the business credit building process. Check all three of your
+    personal credit reports and scores to verify their accuracy.
+    <br><br>
+    Here are two recommended options:
+    <br><br>
+    Annual Credit Report.com
+    <br><br>
+    BusinessFundingEngine.ProCredit.com
+    <br><br>
+    By optimizing your personal and business credit scores, you will make much more capital and
+    resources available to your business at higher credit limits, better rates, terms and pricing.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Check Your Personal Credit</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Separating personal and business credit will better protect a business owner’s assets and credit ratings. By ensuring that your personal credit reports and credit scores are fully optimized you gain leverage in the business credit building process. Check all three of your personal credit reports and scores to verify their accuracy.
-<br><br>
-Here are two recommended options:
-<br><br>
-Annual Credit Report.com
-<br><br>
-BusinessFundingEngine.ProCredit.com
-<br><br>
-By optimizing your personal and business credit scores, you will make much more capital and resources available to your business at higher credit limits, better rates, terms and pricing.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
