--- a/businesscreditcourse/templates/22.html
+++ b/businesscreditcourse/templates/22.html
@@ -1,34 +1,15 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Establish a Low 5 Business Bank Rating
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    If you have the ability to establish a Low 5 Bank Rating ($10k+ account balance) then do
+    so as soon as possible. Although this task does not impact the business credit building process
+    it does position your company to potentially receive a traditional loan from your financial
+    institution
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Establish a Low 5 Business Bank Rating</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>If you have the ability to establish a Low 5 Bank Rating ($10k+ account balance) then do so as soon as possible. Although this task does not impact the business credit building process it does position your company to potentially receive a traditional loan from your financial institution</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
