--- a/businesscreditcourse/templates/23.html
+++ b/businesscreditcourse/templates/23.html
@@ -1,34 +1,15 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Establish a Low 5 Business Balance Rating
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Once you have established a Bank Rating of Low 5 now it’s essential to maintain that
+    balance for a period of 90 days prior to applying for a business loan or line of credit from
+    your bank. By achieving a Low 5 Balance Rating the bank will look upon your business as having
+    favorable cash flow and a strong ability to repay.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Establish a Low 5 Business Balance Rating</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Once you have established a Bank Rating of Low 5 now it’s essential to maintain that balance for a period of 90 days prior to applying for a business loan or line of credit from your bank. By achieving a Low 5 Balance Rating the bank will look upon your business as having favorable cash flow and a strong ability to repay.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
