--- a/businesscreditcourse/templates/26.html
+++ b/businesscreditcourse/templates/26.html
@@ -1,36 +1,22 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Search for Your Business on Equifax
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    To check and see if your company has an Equifax Small Business Credit Report requires
+    that you conduct a search. Once there, click on the ‘Company Search’ link and provide your
+    company information in the “Find a Company” box and click on the “Search” button. If your
+    company shows up you can purchase a one-time Business Credit Report or for ongoing access you
+    can select a monitoring service for a monthly fee.
+    <br><br>
+    If you get “No results found” for initial search we recommend conducting an advanced search by
+    clicking on the link and checking one more time. If your company is still not listed, don’t
+    worry the credit sources we list in Module 4 will enable you to start building your Equifax
+    Business Credit Report. If your business does show up the Business Credit Monitoring plan is the
+    best option to have ongoing access to your file as you continue to build it up
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Search for Your Business on Equifax</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>To check and see if your company has an Equifax Small Business Credit Report requires that you conduct a search. Once there, click on the ‘Company Search’ link and provide your company information in the “Find a Company” box and click on the “Search” button. If your company shows up you can purchase a one-time Business Credit Report or for ongoing access you can select a monitoring service for a monthly fee.
-<br><br>
-If you get “No results found” for initial search we recommend conducting an advanced search by clicking on the link and checking one more time. If your company is still not listed, don’t worry the credit sources we list in Module 4 will enable you to start building your Equifax Business Credit Report. If your business does show up the Business Credit Monitoring plan is the best option to have ongoing access to your file as you continue to build it up</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
