--- a/businesscreditcourse/templates/28.html
+++ b/businesscreditcourse/templates/28.html
@@ -1,34 +1,14 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Search for Your Business on D&B{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    First step is to check and see if your company is already listed with Dun & Bradstreet
+    by running a search. The search results will show whether or not your business currently has a
+    file with Dun & Bradstreet. Depending on your results, you’ll want to follow the instructions in
+    Task 2 or Task 3.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Search for Your Business on D&B</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>First step is to check and see if your company is already listed with Dun & Bradstreet by running a search. The search results will show whether or not your business currently has a file with Dun & Bradstreet. Depending on your results, you’ll want to follow the instructions in Task 2 or Task 3.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
