--- a/businesscreditcourse/templates/3.html
+++ b/businesscreditcourse/templates/3.html
@@ -1,34 +1,15 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
-
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>File for "Foreign Corporation" status</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>If the State where your business was formed does not match the State of its primary location then your business will need to file for “Foreign Corporation” status and obtain a “Certificate of Authority” in the State where it is located and does business from. For example, if your business was incorporated in Nevada or Delaware, but its primary location is in Illinois or California, then you will have to file for Foreign Corporation status in either Illinois or California.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
+{% block title %}
+    File for "Foreign Corporation" status
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    If the State where your business was formed does not match the State of its primary location then your business will
+    need to file for “Foreign Corporation” status and obtain a “Certificate of Authority” in the State where it is
+    located and does business from. For example, if your business was incorporated in Nevada or Delaware, but its
+    primary location is in Illinois or California, then you will have to file for Foreign Corporation status in either
+    Illinois or California.
+{% endblock card-content %}
