--- a/businesscreditcourse/templates/30.html
+++ b/businesscreditcourse/templates/30.html
@@ -1,34 +1,15 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Task Number 3 - If Your Company Does Not Show Up in Search
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    If your company does not show up you’ll need to get a D-U-N-S® Number as soon as
+    possible. You can go the free route and apply for a free D-U-N-S Number which takes about 30
+    days to receive. You’ll need to know your SIC code for this process. Go to NAICS.com and scroll
+    down to the “Search SIC Codes by Industry” box.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Task Number 3 - If Your Company Does Not Show Up in Search</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>If your company does not show up you’ll need to get a D-U-N-S® Number as soon as possible. You can go the free route and apply for a free D-U-N-S Number which takes about 30 days to receive. You’ll need to know your SIC code for this process. Go to NAICS.com and scroll down to the “Search SIC Codes by Industry” box.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
