--- a/businesscreditcourse/templates/31.html
+++ b/businesscreditcourse/templates/31.html
@@ -1,34 +1,16 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Equifax Small Business Credit Risk Score
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Equifax Small Business is more guarded about what their commercial scoring model is
+    based on. However, it's safe to say a large portion of their risk scoring model is based on
+    making payments on time and keeping your company's report free from any public records,
+    collections, or excessive credit inquiries. The score used for businesses is known as the Small
+    Business Credit Risk Score. To view a sample score report click on the download file below.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Equifax Small Business Credit Risk Score</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>Equifax Small Business is more guarded about what their commercial scoring model is based on. However, it's safe to say a large portion of their risk scoring model is based on making payments on time and keeping your company's report free from any public records, collections, or excessive credit inquiries. The score used for businesses is known as the Small Business Credit Risk Score. To view a sample score report click on the download file below.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
