--- a/businesscreditcourse/templates/32.html
+++ b/businesscreditcourse/templates/32.html
@@ -1,37 +1,22 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    EDun & Bradstreet Paydex® Score
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    A company's Paydex® score is directly tied to its D&B business credit report. Similar to
+    your personal FICO® score, it's a statistical measurement of your company's creditworthiness
+    based on reporting trade lines. Paydex® score ranges from 0-100, with 90-100 considered
+    excellent; 80 and below rated as good; and 70 and below rated as poor.
+    <br><br>
+    You will need to aim for at least an 80+ score to qualify for most business finance programs. In
+    order to accomplish this you'll need at least three trade references to generate a score but we
+    recommend at least five (5) trade references reporting to D&B for starters.
+    <br><br>
+    Ultimately your goal should be to have 8-10 trade references reporting on each of your company's
+    business credit reports for optimal depth, history and diversity.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Dun & Bradstreet Paydex® Score</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>A company's Paydex® score is directly tied to its D&B business credit report. Similar to your personal FICO® score, it's a statistical measurement of your company's creditworthiness based on reporting trade lines. Paydex® score ranges from 0-100, with 90-100 considered excellent; 80 and below rated as good; and 70 and below rated as poor.
-<br><br>
-You will need to aim for at least an 80+ score to qualify for most business finance programs. In order to accomplish this you'll need at least three trade references to generate a score but we recommend at least five (5) trade references reporting to D&B for starters.
-<br><br>
-Ultimately your goal should be to have 8-10 trade references reporting on each of your company's business credit reports for optimal depth, history and diversity.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
