--- a/businesscreditcourse/templates/4.html
+++ b/businesscreditcourse/templates/4.html
@@ -1,35 +1,19 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+
+
+{% extends "business-credit-course-template.html" %}
 {% load static %}
-
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Your Business Address</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>The address of your business needs to look like a business address. Do not use a post office box for your physical business address. You can use it for a business mailing address which is a separate address. You can use your home address for business credit building, but be aware that some lenders will not fund “home based” businesses. This will not stop you from building business credit scores, but may limit your funding options. <br><br>
-The best way to know if the address you are using will work or not is to test it using Experian’s address verification tool. If the address shows “residential or mail stop” it is something you should fix. If the address comes back as “business or unknown”, you are fine using that address for your business./h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
+{% block title %}
+    Your Business Address
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    The address of your business needs to look like a business address. Do not use a post office box for your physical
+    business address. You can use it for a business mailing address which is a separate address. You can use your home
+    address for business credit building, but be aware that some lenders will not fund “home based” businesses. This
+    will not stop you from building business credit scores, but may limit your funding options. <br><br>
+    The best way to know if the address you are using will work or not is to test it using Experian’s address
+    verification tool. If the address shows “residential or mail stop” it is something you should fix. If the address
+    comes back as “business or unknown”, you are fine using that address for your business.
+{% endblock card-content %}
