--- a/businesscreditcourse/templates/one.html
+++ b/businesscreditcourse/templates/one.html
@@ -1,32 +1,16 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-    <div class="row page-header">
-        <div class="col-lg-6 align-self-center">
-            <h2> Select the Entity Structure of Your Business</h2>
-        </div>
-    </div>
-    <section class="main-content">
-        <div class="row justify-content-center">
-            <div class="col-md-8 col-sm-6">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                         height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <h3>Set up a business entity or make sure your existing entity is set up correctly. It’s best to
-                            build business credit with an LLC or Corporation (S or C Corporation). Creditors, Suppliers,
-                            Lenders, etc. prefer to see an actual business entity. In addition, a corporation or an LLC
-                            is treated as a separate legal entity which separates you personally from the liability of
-                            operating your business. Be sure to compare each entity so you can see the difference
-                            between the most common entities.</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-{% endblock %}
+{% block title %}
+    Select the Entity Structure of Your Business
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    Set up a business entity or make sure your existing entity is set up correctly. It’s best to
+    build business credit with an LLC or Corporation (S or C Corporation). Creditors, Suppliers,
+    Lenders, etc. prefer to see an actual business entity. In addition, a corporation or an LLC
+    is treated as a separate legal entity which separates you personally from the liability of
+    operating your business. Be sure to compare each entity so you can see the difference
+    between the most common entities.
+{% endblock card-content %}
