--- a/businesscreditcourse/templates/twelve.html
+++ b/businesscreditcourse/templates/twelve.html
@@ -1,34 +1,14 @@
-{% extends "pages/base-businesscreditcourse.html" %}
+{% extends "business-credit-course-template.html" %}
 {% load static %}
+{% block title %}
+    Obtain a Federal Employer Identification Number (EIN)
+{% endblock title %}
+{% block img-url %}
+    https://images.pexels.com/photos/48148/document-agreement-documents-sign-48148.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+{% endblock img-url %}
+{% block card-content %}
+    To build business credit your business must have a Federal Tax Identification Number
+    (EIN). To obtain an EIN, or to determine if you need a new one go to irs.gov and do it yourself
+    or simply have a professional incorporation service provider do it for you.
+{% endblock card-content %}
 
-{% block extrastyle %}
-<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous" data-cfasync="false">
-</script>
-<script>
-    var chatPal = new ChatPal({
-        embedId: 'DfT7BnTm5dGn',
-        remoteBaseUrl: 'https://chatterpal.me/',
-        version: '7.23'
-    });
-</script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
-{% block content %}
-
-<div class="row page-header">
-   <div class="col-lg-6 align-self-center ">
-      <h2>Obtain a Federal Employer Identification Number (EIN)</h2>
-   </div>
-</div>
-<section class="main-content">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="card-body">
-          <center> <h3>To build business credit your business must have a Federal Tax Identification Number (EIN). To obtain an EIN, or to determine if you need a new one go to irs.gov and do it yourself or simply have a professional incorporation service provider do it for you.</h3> </center>
-      </div>
-   </div>
-</section>
-
-{% endblock %}
